chore: fix deprecations (#16)